--- a/client.html
+++ b/client.html
@@ -103,11 +103,11 @@
         socketio.on('login', function(id) {
             userId = id;
         });
-
+/*
         socketio.on('disconnect_client', function(id) {
            if
         });
-
+*/
         socketio.on("message_to_client", function (data) {
             // Add the new message to the room
             rooms = data.rooms;
@@ -152,6 +152,29 @@
         socketio.on('refresh_rooms_client', function(data){
            rooms = data;
         });
+        socketio.on('refresh_banned_client', function(data){
+
+            rooms = data.rooms;
+            //alert(data.bannedUser);
+           // alert(username);
+            if(data.bannedUser == username){
+                alert("show menu");
+                showMenuItems();
+
+            }
+        });
+        socketio.on('refresh_kicked_client', function(data){
+
+            rooms = data.rooms;
+           // alert(data.bannedUser);
+         //   alert(username);
+            if(data.kickedUser == username){
+                alert("show menu");
+                showMenuItems();
+
+            }
+        });
+
         socketio.on('refresh_likes_client', function(data){
             rooms = data;
             //Erase messages
@@ -340,6 +363,7 @@
             //Alert the user
             var banString = "You have been banned from the chat room " + roomName;
             sendPM(banString, user, "Admin");
+
             //User cannot come back
         }
         function loadUsers() {
