some mroe changes

--- a/client.html
+++ b/client.html
@@ -112,18 +112,32 @@
                 renderMessage(data.message);
             }
         });
+        socketio.on("pmessage_to_client", function (data) {
+            // Add the new message to the room
+            rooms = data.rooms;
+            // If we're in the room, show the message
+            if (currentRoom !== null && data.roomName === currentRoom.name) {
+                renderPMessage(data.pmessage);
+            }
+        });
         //Personal Messages
+        /*
         socketio.on("pm_client", function (data) {
             // Add the new message to the room
             personalMessages = data.messages;
             // If we're the user, show the message
+            //FIXME
+            var parent = document.getElementById("privatechatmessages");
+            while(parent.firstChild){
+                parent.removeChild(parent.firstChild);
+            }
             for(var i=0; i<personalMessages.length; i++){
                 if(personalMessages[i]['user'] == username){
                     renderPMessage(personalMessages[i]);
                 }
             }
         });
-
+*/
         socketio.on('enter_room_client', function(data) {
             // Add the new user to the room
             rooms = data.rooms;
@@ -135,6 +149,7 @@
                 })[0];
                 showMessagingItems();
                 loadMessages(); // Load and render messages
+                loadPMessages();
                 loadUsers(); // Load and render users
             } else if (currentRoom !== null && data.roomName === currentRoom.name) {
                 // If we're in the room and someone else joined, render
@@ -169,7 +184,7 @@
         });
 
         socketio.on('refresh_likes_client', function(data){
-            rooms = data;
+            rooms = data.rooms;
             //Erase messages
             var parent = document.getElementById("chatlog");
             while(parent.firstChild){
@@ -177,6 +192,7 @@
             }
 
             loadMessages();
+
         });
         socketio.on('get_rooms_client', function(data) {
             rooms = data;
@@ -199,6 +215,7 @@
             if (data.exitingUser === username) {
                 $("#chatlog").empty();
                 $('#user-list').empty();
+                $("#privatechatmessages").empty();
                 currentRoom = null;
                 showMenuItems();
             } else if (currentRoom !== null && data.roomName === currentRoom.name) {
@@ -257,6 +274,13 @@
             document.getElementById("privatemsg").appendChild(document.createElement("hr"));
             document.getElementById("privatemsg").appendChild(document.createTextNode(message.sender + ': ' +
                 message.messageText));
+            if(message.user == username){
+                document.getElementById("privatechatmessages").appendChild(document.createElement("hr"));
+                document.getElementById("privatechatmessages").appendChild(document.createTextNode(message.sender + ': ' +
+                    message.messageText));
+            }
+
+
         }
 
         function renderUsername(name, button) {
@@ -285,10 +309,15 @@
                 });
                 submitButton.click(function(){
                    //Send PM
+                    alert("Button pressed");
                     var message = document.getElementById('message').value;
                     var user = name;
                     var sender = username;
-                    sendPM(message, user, sender);
+                    alert("After");
+                    alert("Message" + message);
+                    alert("User" + user);
+                    alert("Sender " + sender);
+                    sendPM(message, user, sender, currentRoom);
                 });
                 userItem.append(kickButton);
                 userItem.append(permenentButton);
@@ -309,6 +338,17 @@
                         .text("Send Private Message")
                         .addClass('btn')
                         .addClass('btn-primary').attr('id', 'private-button');
+                    submitButton.click(function(){
+                        //Send PM
+                        alert("Button pressed");
+                        var message = document.getElementById('message').value;
+                        var user = name;
+                        var sender = username;
+                        //alert("Message" + message);
+                       // alert("User" + user);
+                       //alert("Sender " + sender);
+                        sendPM(message, user, sender, currentRoom);
+                    });
                     userItem.append(submitButton);
                     userItem.append(inputBox);
                     userItem.append('<hr>');
@@ -329,7 +369,7 @@
             var deleteItem =  document.getElementById(user);
             deleteItem.remove();
             var banString = "You have been kicked from the chat room " + roomName;
-            sendPM(banString, user, "Admin");
+            sendPM(banString, user, "Admin", currentRoom);
             //Alert the user
 
 
@@ -354,7 +394,7 @@
             deleteItem.remove();
             //Alert the user
             var banString = "You have been banned from the chat room " + roomName;
-            sendPM(banString, user, "Admin");
+            sendPM(banString, user, "Admin", currentRoom);
             //User cannot come back
         }
         function loadUsers() {
@@ -382,13 +422,14 @@
                 room: room
             });
         }
-        function sendPM(message, user, sender){
+        function sendPM(message, user, sender, room){
             socketio.emit("pm_server", {
                 pmessage: {
                     messageText: message,
                     sender: sender,
                     user: user
-                }
+                },
+                room: room
             });
         }
 
@@ -405,6 +446,11 @@
         function loadMessages() {
             $.each(currentRoom.messages, function(index, item) {
                 renderMessage(item);
+            });
+        }
+        function loadPMessages() {
+            $.each(currentRoom.privateMessages, function(index, item) {
+                renderPMessage(item);
             });
         }
         function loadRooms() {
@@ -528,7 +574,8 @@
                 users: [],
                 kicked: [],
                 banned: [],
-                messages: []
+                messages: [],
+                privateMessages: []
             };
             socketio.emit('new_room_server', room);
         }
@@ -582,6 +629,12 @@
         <p>Users currently in this chat: </p>
         <div id="user-list"></div>
         <div id="chatlog"></div>
+        <p>
+            Private Messages
+        </p>
+        <div id = "privatechatmessages">
+
+        </div>
     </div>
 </div>
 <script>
